# exif_batch

./: CMakeLists.txt  README.md  exif_batch_set.cpp  vcpkg.json
.github/workflows/: main.yml
